# GetAWSElastiCacheInfo

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
_bmad-output/implementation-artifacts/: fix-showmemberinfo-parameter.md  tech-spec-aws-elasticache-info-cli.md  tech-spec-fix-elasticache-output-fields-archived-20260114.md  tech-spec-global-datastore-cross-region-query.md  tech-spec-parallel-query-shared-cache.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
elasticache_info/: __init__.py  cli.py  field_formatter.py  utils.py
elasticache_info/aws/: __init__.py  client.py  exceptions.py  models.py
elasticache_info/formatters/: __init__.py  base.py  csv_formatter.py  markdown_formatter.py
tests/: __init__.py  test_client.py  test_field_formatter.py  test_formatters.py  test_performance_manual.py
