[project]
name = "elasticache-info"
version = "0.1.0"
description = "A CLI tool to query and export AWS ElastiCache information"
authors = [
    {name = "Paul Tung", email = "paul.tung@splashtop.com"}
]
readme = "README.md"
license = {text = "Apache-2.0 license"}
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "boto3>=1.28.0",
    "rich>=13.0.0",
]

[project.scripts]
get-aws-ec-info = "elasticache_info.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto[elasticache]>=4.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
